--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "redbox-react": "^1.3.2"
   },
   "scripts": {
-    "start": "dora --plugins \"proxy?watchDirs=./mock,webpack,webpack-hmr\"",
+    "start": "dora --plugins \"proxy?watchDirs=./mock,browser-history,webpack,webpack-hmr\"",
     "build": "atool-build",
     "test": "atool-test-mocha ./src/**/*-test.js"
   },
