--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "babel-plugin-import": "^1.1.0",
     "dva": "^1.1.0",
     "g2": "^2.2.0",
-    "history": "^4.5.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "underscore": "^1.8.3"
@@ -21,6 +20,7 @@
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-runtime": "^6.9.2",
     "dora": "^0.4.3",
+    "dora-plugin-browser-history": "^0.2.0",
     "dora-plugin-proxy": "^0.8.4",
     "dora-plugin-webpack": "^0.8.1",
     "dora-plugin-webpack-hmr": "^0.2.1",
