--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-plugin-import": "^1.1.0",
     "copy-webpack-plugin": "^4.0.1",
     "dva": "^1.1.0",
+    "dva-loading": "^0.2.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "underscore": "^1.8.3"
